<resources>
    <string name="app_name">Quiz App</string>
    <string name="French">French</string>
    <string name="english">English</string>
    <string name="Continue">continue</string>
    <string name="no_cheating">No cheating</string>
    <string name="start_game">start game</string>
    <string name="camry_motor_is_the_product_of_which_company">CAMRY MOTOR is the product of which company?</string>
    <string name="nwankwo_kanu">Nwankwo Kanu</string>
    <string name="jay_jay_okocha">Jay Jay Okocha</string>
    <string name="mikel_obi">Mikel Obi</string>
    <string name="about_quiz">About Quiz</string>
    <string name="current_affairs">Current affairs</string>
    <string name="what_do_you_know_about_the_world">What do you Know About the World ?</string>
    <string name="congratulations">Congratulations !</string>
    <string name="awesome">Awesome !</string>
    <string name="replay">RePlay</string>
    <string name="that_knowledge_is_about_to_be_tested">That Knowledge is about to be tested</string>
    <string name="enjoy_yourself">Enjoy Yourself</string>
    <string name="please_select_your_language">Please select your language</string>
    <string name="who_invented_computer_and_in_which_year">Who Invented Computer and in Which Year?</string>
    <string name="charles_barbage_in_1945">Charles Barbage in 1945</string>
    <string name="charles_barbage_in_1954">Charles Barbage in 1954</string>
    <string name="charles_barbage_in_1944">Charles Barbage in 1944</string>
    <string name="the_upper_and_lower_house_in_united_kingdom_are_called">The Upper and Lower House In United Kingdom Are Called?</string>
    <string name="house_of_the_lords_and_house_of_the_commons">House of the lords and House of the commons</string>
    <string name="house_of_lords_and_house_of_commons">House of Lords and House of Commons</string>
    <string name="_1_10">1/10</string>
    <string name="_2_10">2/10</string>
    <string name="house_of_all_and_house_of_some">House of All and House of Some</string>
    <string name="_3_10">3/10</string>
    <string name="noun_stands_for_what">NOUN stands for what ?</string>
    <string name="a_name_of_a_person_animal_place_or_thing">A name of a person, animal, place or thing</string>
    <string name="national_open_university_of_nigeria">National Open University of Nigeria</string>
    <string name="national_orga_nistaion_of_universities_in_nigeria">National Orga nistaion of Universities in Nigeria</string>
    <string name="_8_10">8/10</string>
    <string name="now_you_are_talking_which_network_is_that">Now you are talking,Which network is that?</string>
    <string name="_5_10">5/10</string>
    <string name="the_full_meaning_of_usaid">The full meaning of USAID?</string>
    <string name="united_state_agency_for_international_development">United State Agency For International Development</string>
    <string name="united_state_acquired_international_development">United State Acquired International Development</string>
    <string name="ultimate_sequence_action_of_interdenominational_differnces">Ultimate sequence Action of Interdenominational Differnces</string>
    <string name="next">Next</string>
    <string name="_4_10">4/10</string>
    <string name="one_of_the_nigeria_legend_player_papilo_is_who">One of the Nigeria Legend Player PAPILO is Who?</string>
    <string name="_9_10">9/10</string>
    <string name="_7_10">7/10</string>
    <string name="which_company_is_the_producer_of_coke">Which company is the producer of Coke ?</string>
    <string name="nigeria_bottling_company">Nigeria Bottling Company</string>
    <string name="coca_cola">Coca Cola</string>
    <string name="united_state_bottling_company">United State Bottling Company</string>
    <string name="hint">Hint</string>
    <string name="_6_10">6/10</string>
    <string name="the_oldest_disease_in_the_world_is">The Oldest disease in The world Is?</string>
    <string name="answer">Answer</string>
    <string name="manchester_united">Manchester United</string>
    <string name="arsenal">Arsenal</string>
    <string name="manchester_city">Manchester City</string>
    <string name="which_football_team_is_called_red_devil_in_the_world">Which Football Team is called RED DEVIL in the world?</string>
    <string name="_10_10">10/10</string>
    <string name="home">Home</string>
</resources>
