<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        tools:context="com.example.user.quizapp.QuestionFiveActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:fontFamily="sans-serif"
            android:textSize="25sp"
            android:textStyle="normal"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:clipChildren="false"
            android:clipToPadding="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            app:cardCornerRadius="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimary"
            tools:cardElevation="8dp"
            tools:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/number_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_10"
                    android:textSize="35sp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/the_full_meaning_of_usaid"
                    android:textColor="#E7E7E7"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"/>

                <CheckBox
                    android:id="@+id/optionA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/united_state_agency_for_international_development"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:textColor="#E7E7E7"
                    android:buttonTint="@color/colorAccent"/>

                <CheckBox
                    android:id="@+id/optionB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/united_state_acquired_international_development"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:textColor="#E7E7E7"
                    android:buttonTint="@color/colorAccent"/>

                <CheckBox
                    android:id="@+id/optionC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/ultimate_sequence_action_of_interdenominational_differnces"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:textColor="#E7E7E7"
                    android:buttonTint="@color/colorAccent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:layout_gravity="bottom">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:text="@string/hint"
                    android:textAllCaps="true"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:onClick="hint"
                    android:id="@+id/hint_button"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="25sp"
                    android:onClick="next"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>