<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        tools:context="com.example.user.quizapp.QuestionTwoActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:fontFamily="sans-serif"
            android:textSize="25sp"
            android:textStyle="normal"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            app:cardCornerRadius="5dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            tools:cardElevation="8dp"
            tools:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/number_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_10"
                    android:textSize="30sp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/question_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/the_upper_and_lower_house_in_united_kingdom_are_called"
                    android:textColor="#E7E7E7"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"/>

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_marginBottom="15dp">

                    <RadioButton
                        android:id="@+id/optionA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/house_of_the_lords_and_house_of_the_commons"
                        android:textSize="20sp"
                        android:textColor="#E7E7E7"
                        android:paddingLeft="15dp"
                        android:buttonTint="@color/colorAccent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"/>

                    <RadioButton
                        android:id="@+id/optionB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/house_of_lords_and_house_of_commons"
                        android:textSize="20sp"
                        android:textColor="#E7E7E7"
                        android:paddingLeft="15dp"
                        android:buttonTint="@color/colorAccent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"/>

                    <RadioButton
                        android:id="@+id/optionC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/house_of_all_and_house_of_some"
                        android:textSize="20sp"
                        android:textColor="#E7E7E7"
                        android:paddingLeft="15dp"
                        android:buttonTint="@color/colorAccent"
                        android:layout_marginTop="5dp"/>

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="bottom">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:text="@string/hint"
                        android:textAllCaps="true"
                        android:backgroundTint="@color/colorAccent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:textSize="25sp"
                        android:layout_weight="1"
                        android:onClick="hint"
                        android:id="@+id/hint_button"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/next"
                        android:textAllCaps="true"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:textSize="25sp"
                        android:onClick="next"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
