<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.user.quizapp.AboutQuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_quiz"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textAllCaps="true"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:textSize="25sp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:clipChildren="false"
            android:clipToPadding="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="40dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:elevation="10dp"
            app:cardCornerRadius="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimary"
            tools:cardElevation="8dp"
            tools:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_affairs"
                    android:textColor="@color/colorAccent"
                    android:padding="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:text="@string/what_do_you_know_about_the_world"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:text="That Knowledge is about to be tested"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:textAllCaps="true"
                    android:text="Enjoy Yourself"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:text="@string/start_game"
                    android:textAllCaps="true"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"
                    android:onClick="startGame"
                    android:layout_marginBottom="15dp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
